--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
         android:label="googlelab"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC3aBUXe1VtRKloB1Di5eGaa9O0Q02AYrE" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="My API Key was here(Just removed it for confidentiality)" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
